<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_date"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="date" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_site"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site" />

        <TextView
            android:id="@+id/tv_site"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="site" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_mail"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail" />

        <TextView
            android:id="@+id/tv_mail"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="mail" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_stadium"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stadium" />

        <TextView
            android:id="@+id/tv_stadium"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="stadium" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_name_club"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_club" />

        <TextView
            android:id="@+id/tv_name_club"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="name_club" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_coach"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach" />

        <TextView
            android:id="@+id/tv_coach"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="coach" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_total_win"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_win" />

        <TextView
            android:id="@+id/tv_total_win"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="total_win" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_URL"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url" />

        <TextView
            android:id="@+id/tv_URL"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="URL" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_president"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/president" />

        <TextView
            android:id="@+id/tv_president"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="president" />
    </LinearLayout>

</LinearLayout>